<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:cardBackgroundColor="#64B5F6"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:text="@string/title"
                android:id="@+id/t1"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/sub_title"
                android:id="@+id/t2"
                android:textColor="#fff"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/description"
                android:id="@+id/t3"
                android:textSize="15sp"
                android:textColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/img"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/card" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>