<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#E1F5FE"
    tools:context=".Behome">
    <android.support.v7.widget.CardView
        app:cardElevation="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#81C784">
    <Button
        android:id="@+id/viewrequest"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/view_request"
        android:layout_marginBottom="30dp"
        android:textColor="#000"
        android:padding="15dp"
        android:drawableLeft="@drawable/ic_view"
        android:drawableStart="@drawable/ic_view" />
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        app:cardElevation="12dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#64B5F6">
    <Button
        android:padding="15dp"
        android:id="@+id/update"
        android:layout_width="220dp"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_update"
        android:text="@string/update"
        android:textColor="#000"
        android:drawableStart="@drawable/ic_update" />
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        app:cardElevation="12dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#F06292">
    <Button
        android:padding="15dp"
        android:id="@+id/tlogout"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:drawableLeft="@drawable/ic_logout"
        android:textColor="#DD2C00"
        android:drawableStart="@drawable/ic_logout" />
    </android.support.v7.widget.CardView>

</LinearLayout>