<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".Bereg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:src="@drawable/register_purple" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableEnd="@drawable/ic_username"
                android:drawableRight="@drawable/ic_username"
                android:hint="@string/username"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_password"
                android:drawableRight="@drawable/ic_password"
                android:hint="password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_fullname"
                android:drawableRight="@drawable/ic_fullname"
                android:hint="@string/fullname"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_call"
                android:drawableRight="@drawable/ic_call"
                android:hint="@string/mobile"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_email"
                android:drawableRight="@drawable/ic_email"
                android:hint="email"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:hint="Gender:"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:text="@string/male"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="Female"
                android:textSize="15sp" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_timing"
                android:drawableRight="@drawable/ic_timing"
                android:hint="Class timing in  hrs"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/anum"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_aadhar"
                android:drawableRight="@drawable/ic_aadhar"
                android:hint="adharnumber"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_location"
                android:drawableRight="@drawable/ic_location"
                android:hint="city_locality"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_address"
                android:drawableRight="@drawable/ic_address"
                android:hint="addresses"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_class"
                android:drawableRight="@drawable/ic_class"
                android:hint="Classes to Teach"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/experience"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_experience"
                android:drawableRight="@drawable/ic_experience"
                android:hint="experience"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_subject"
                android:drawableRight="@drawable/ic_subject"
                android:hint="Subjects are interested to Teach"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#00C853"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="#fff" />

    </LinearLayout>
</ScrollView>